Updated Sonar Groovy plugin to auto-detect directories, support Grails, add documentation, explain license issue
Conflicts:
	src/main/java/org/sonar/plugins/groovy/GroovyPlugin.java
	src/main/java/org/sonar/plugins/jacoco/AbstractAnalyzer.java